# xeofs

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  cliff.toml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  how_to.md
.github/workflows/: CI.yml  black_formatting.yml  build-pip.yml  changelog.yml  ci.yml  draft-pdf.yml  formatting.yml  pull-request-linting.yml  release_package.yml  semantic-pull-request.yml  semantic_release.yml
docs/: 013_quickstart.ipynb  01_user_guide.rst  api.rst  api_1_intra.rst  api_2_inter.rst  api_3_eval.rst  api_4_utils.rst  api_advanced_techniques.rst  api_core_methods.rst  api_rotation.rst  api_validation.rst  benefits.rst  conf.py  environment.yml  faq.rst  getting_started.ipynb  how_to_cite.rst  index.rst  installation.rst  model_cpca.rst  model_pca.html  model_pca.ipynb  model_pca.md  model_rpca.rst  models.rst  overview.rst  overview_1_why.rst  overview_2_features.rst  overview_3_contributing.rst  quickstart.ipynb  sphinx_custom_filters.py  supported_methods.rst  tutorial.rst  why.rst  why_xeofs.rst
docs/_autosummary/: xeofs.inumpy.eof.EOF.rst  xeofs.models.Bootstrapper.rst  xeofs.models.CCA.rst  xeofs.models.ComplexEOF.rst  xeofs.models.ComplexEOFRotator.rst  xeofs.models.ComplexMCA.rst  xeofs.models.ComplexMCARotator.rst  xeofs.models.EOF.rst  xeofs.models.EOFRotator.rst  xeofs.models.ExtendedEOF.rst  xeofs.models.GWPCA.rst  xeofs.models.MCA.rst  xeofs.models.MCARotator.rst  xeofs.models.MCA_Rotator.rst  xeofs.models.OPA.rst  xeofs.models.ROCK_PCA.rst  xeofs.models.Rotator.rst  xeofs.models.SparsePCA.rst  xeofs.models.eof.EOF.rst  xeofs.models.rotator.Rotator.rst  xeofs.pandas.Bootstrapper.rst  xeofs.pandas.EOF.rst  xeofs.pandas.MCA.rst  xeofs.pandas.MCA_Rotator.rst  xeofs.pandas.ROCK_PCA.rst  xeofs.pandas.Rotator.rst  xeofs.pandas.eof.EOF.rst  xeofs.validation.EOFBootstrapper.rst  xeofs.xarray.Bootstrapper.rst  xeofs.xarray.EOF.rst  xeofs.xarray.MCA.rst  xeofs.xarray.MCA_Rotator.rst  xeofs.xarray.ROCK_PCA.rst  xeofs.xarray.Rotator.rst  xeofs.xarray.eof.EOF.rst
docs/_static/: custom.css
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/api_reference/: cross_set_analysis.rst  index.rst  model_evaluation.rst  multi_set_analysis.rst  single_set_analysis.rst  utilities.rst
docs/auto_examples/: index.rst  plot_example.rst  sg_execution_times.rst
docs/content/: contributing.rst  index.rst
docs/perf/: figure_timings.py  timings.nc  xeofs_timings.py
docs/user_guide/: dask_support.rst  dask_support2.ipynb  efficient.rst  faq.rst  how_to_cite.rst  index.rst  model_evaluation.rst  model_implementation.rst  model_serialization.rst  quickstart.ipynb  xeofs_comparison.rst
docs/whats_new/: CHANGELOG.md
examples/: README.rst
examples/1eof/: README.rst  plot_bootstrap.py  plot_eof-smode.py  plot_eof-tmode.py  plot_mreof.py  plot_multivariate-eof.py  plot_rotated_eof.py  plot_weighted-eof.py
examples/1single/: README.rst  plot_complex_eof.py  plot_eeof trend.py  plot_eeof.py  plot_eof-smode.py  plot_gwpca.py  plot_mreof.py  plot_multivariate-eof.py  plot_rotated_eof.py  plot_weighted-eof.py
examples/1uni/: README.rst  plot_eof-smode.py
examples/2cross/: README.rst  plot_mca.py  plot_rotated_mca.py
examples/2mca/: README.rst  plot_rotated_mca.py
examples/2multi/: README.rst  plot_cca.py
examples/2rotated/: README.rst
examples/3multi/: README.rst
examples/3rotated/: plot_mreof.py  plot_rotated_eof.py
examples/3significance/: README.rst  plot_bootstrap.py
examples/3validation/: README.rst  plot_bootstrap.py
publication/: paper.bib  paper.md
puplication/: paper.md
tests/: conftest.py  utilities.py
tests/data/: sample_data.nc
tests/data_container/: test_base_cross_model_data_container.py  test_base_model_data_container.py  test_complex_eof_data_container.py  test_complex_eof_rotator_data_container.py  test_complex_mca_rotator_data_container.py  test_eof_data_container.py  test_eof_rotator_data_container.py  test_mca_data_container.py  test_mca_rotator_data_container.py
tests/inumpy/: test_eof.py
tests/linalg/: test_decomposer.py
tests/models/: test_array_transformer.py  test_base_model.py  test_base_rotator.py  test_bootstrapper.py  test_cca.py  test_complex_eof.py  test_complex_eof_rotator.py  test_complex_mca.py  test_complex_mca_rotator.py  test_cpcca.py  test_cpcca_complex_rotator.py  test_cpcca_rotator.py  test_cross_decomposer.py  test_decomposer.py  test_eeof.py  test_eof.py  test_eof_rotator.py  test_eof_wrapper.py  test_gwpca.py  test_hilbert_eof.py  test_hilbert_mca.py  test_hilbert_mca_rotator.py  test_mca.py  test_mca_rotator.py  test_mca_rotator_wrapper.py  test_mca_wrapper.py  test_opa.py  test_orthogonality.py  test_rock_pca_wrapper.py  test_rotator.py  test_rotator_factory.py  test_rotator_wrapper.py  test_scaler.py  test_sparse_pca.py  test_stacker.py  test_transformer.py  text_complex_eof.py
tests/pandas/: test_dataframe_transformer.py  test_eof.py  test_transformer.py
tests/preprocessing/: test_dataarray_list_stacker.py  test_dataarray_multiindex_converter.py  test_dataarray_sanitizer.py  test_dataarray_scaler.py  test_dataarray_stacker.py  test_datalist_scaler.py  (+23 more)
xeofs/: __init__.py  _version.py  base_model.py  rotator_factory.py
(+517 files in other folders)
