[tool.poetry]
name = "xeofs"
version = "1.2.1"
description = "Collection of EOF analysis and related techniques for climate science"
authors = ["Niclas Rieger <niclasrieger@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/nicrie/xeofs"
repository = "https://github.com/nicrie/xeofs"
documentation = "https://xeofs.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poetry = "^1.6"
numpy = "~1.24"
pandas = ">=1.4.1"
xarray = ">=0.21.1"
scikit-learn = ">=1.0.2"
pooch = "^1.6.0"
tqdm = "^4.64.0"
dask = ">=2023.0.1"
statsmodels = ">=0.14.0"
netCDF4 = "^1.5.7"
numba = "^0.57"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0"
pytest = "^7.0"
coverage = "^6.3"
black = "~23.7.0" 
pre-commit = "^3.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
rpy2 = ">=3.5"
sphinx-gallery = "^0.14"
sphinx-design = "^0.5"
sphinx-copybutton = "^0.5"
nbsphinx = "^0.9"
pydata-sphinx-theme = "^0.14"
sphinx = "^7.2"
nbconvert = "^7.9"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "xeofs/_version.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
uploade_to_release = true
build_command = "pip install poetry && poetry build"
