[tool.poetry]
name = "xeofs"
version = "2.2.5"
description = "Comprehensive EOF analysis in Python with xarray: A versatile, multidimensional, and scalable tool for advanced climate data analysis"
authors = ["Niclas Rieger <niclasrieger@gmail.com>", "Samuel J. Levang <slevang@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xarray-contrib/xeofs"
repository = "https://github.com/xarray-contrib/xeofs"
documentation = "https://xeofs.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poetry = "^1.6"
numpy = "^1.24"
pandas = "^2"
xarray = ">=2023"
scikit-learn = "^1.0.2"
pooch = "^1.6.0"
tqdm = "^4.64.0"
dask = ">=2023.0.1"
statsmodels = "^0.14.0"
netCDF4 = "^1.5.7"
numba = ">=0.57"
typing-extensions = "^4.8.0"
zarr = "^2.0.0"
xarray-datatree = ">=0.0.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0"
pytest = "^7.0"
coverage = "^6.3"
black = "~23.7.0" 
pre-commit = "^3.3"
nbstripout = "^0.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
rpy2 = "^3.5"
sphinx-gallery = "^0.14"
sphinx-design = "^0.5"
sphinx-copybutton = "^0.5"
nbsphinx = "^0.9"
pydata-sphinx-theme = "^0.14"
sphinx = "^7.2"
nbconvert = "^7.9"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_source = "tag"
commit_message = "chore(release): v{version}"
build_command = "pip install poetry && poetry build"
branch = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

